--- a/data/ui/menu.ui
+++ b/data/ui/menu.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
+  <requires lib="gtk+" version="3.24"/>
   <menu id="menu">
     <section>
       <attribute name="display-hint">horizontal-buttons</attribute>
