--- a/data/ui/header.ui
+++ b/data/ui/header.ui
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="3.24"/>
-  <template class="HeaderBar" parent="GtkHeaderBar">
+  <requires lib="libhandy" version="1.0"/>
+  <template class="HeaderBar" parent="HdyHeaderBar">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="no">Wike</property>
