--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -3,8 +3,8 @@
   <requires lib="gtk+" version="3.24"/>
   <requires lib="libhandy" version="1.0"/>
   <template class="PrefsWindow" parent="HdyPreferencesWindow">
-    <property name="default_height">450</property>
-    <property name="default_width">450</property>
+    <property name="default_height">480</property>
+    <property name="default_width">480</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="search-enabled">False</property>
@@ -77,7 +77,17 @@
               </object>
             </child>
             <child>
-              <placeholder/>
+              <object class="HdyComboRow" id="custom_font_combo">
+                <property name="title" translatable="yes">Use custom font for articles</property>
+                <property name="visible">True</property>
+                <child type="prefix">
+                  <object class="GtkSwitch" id="custom_font_switch">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
             </child>
           </object>
         </child>
