Add retry button in view when page fails to load

--- a/data/styles/dark.css
+++ b/data/styles/dark.css
@@ -84,6 +84,16 @@ img:not(.mwe-math-fallback-image-inline, .mwe-math-fallback-image-display, .leaf
   color: #d65451 !important;
 }
 
+#wike-message a.btn {
+  color: #dedede !important;
+  background-color: #333;
+  border: 1px solid #555;
+}
+
+#wike-message a.btn:hover {
+  background-color: #282828;
+}
+
 #wike-historic h3 {
   border-bottom: 1px solid #444;
 }
