Add option to clear personal data

--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -153,6 +153,21 @@
                 </child>
               </object>
             </child>
+            <child>
+              <object class="HdyActionRow">
+                <property name="title" translatable="yes">Clear personal data</property>
+                <property name="subtitle" translatable="yes">Cookies and cache data will be deleted</property>
+                <property name="visible">True</property>
+                <child>
+                  <object class="GtkButton" id="clear_data_button">
+                    <property name="label" translatable="yes">Clear</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
           </object>
         </child>
       </object>
