--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -181,7 +181,7 @@
           <object class="HdyPreferencesGroup">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="title" translatable="yes">Filter available languages</property>
+            <property name="title" translatable="yes">Filter Available Languages</property>
             <child>
               <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
@@ -215,7 +215,7 @@
                 <property name="homogeneous">True</property>
                 <child>
                   <object class="GtkButton" id="select_all_button">
-                    <property name="label" translatable="yes">Select all</property>
+                    <property name="label" translatable="yes">Select All</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -227,7 +227,7 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="select_none_button">
-                    <property name="label" translatable="yes">Select none</property>
+                    <property name="label" translatable="yes">Select None</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
