--- a/data/ui/header.ui
+++ b/data/ui/header.ui
@@ -138,7 +138,7 @@
               <object class="GtkImage">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="icon_name">wike-flag-symbolic</property>
+                <property name="icon_name">wike-language-symbolic</property>
               </object>
             </child>
           </object>
