--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -183,22 +183,11 @@
             <property name="can-focus">False</property>
             <property name="title" translatable="yes">Filter Available Languages</property>
             <child>
-              <object class="GtkSearchEntry" id="languages_entry">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="margin-bottom">12</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="shadow_type">in</property>
-                <property name="min_content_height">250</property>
+                <property name="propagate-natural-height">True</property>
                 <child>
                   <object class="GtkViewport">
                     <property name="visible">True</property>
